# ordinis

./: README.md  flake.nix  hie.yaml  ordinis.cabal
.github/workflows/: nix.yml
app/ordinis/: Main.hs
examples/: bindings.ordinis  functions.ordinis  rows.ordinis  typeVariables.ordinis  unicode.ordinis
examples/invalid/lexing/: openString.ordinis
examples/invalid/parsing/: duplicateLabels.ordinis  emptyVariant.ordinis  multipleVariant.ordinis
examples/invalid/typechecking/: duplicateTypeSig.ordinis  extraParams.ordinis  loneTypeSig.ordinis  mismatchedParamCounts.ordinis  unboundVar.ordinis  unification.ordinis
src/Language/: Ordinis.hs
src/Language/Ordinis/: Lexer.x  Parser.y  Syntax.hs  Typechecker.hs
src/Language/Ordinis/Typechecker/: Fresh.hs  Names.hs
