cabal-version: 2.4
name:          ordinis
version:       0.1.0.0
category:      Language
license:       ISC
license-file:  LICENSE
author:        Kevin Mullins
maintainer:    kevin@pnotequalnp.com
copyright:     Kevin Mullins 2022

common base
  default-language:   Haskell2010
  ghc-options:
    -Wall -Werror=incomplete-patterns -fno-show-valid-hole-fits
    -Wno-unticked-promoted-constructors

  default-extensions:
    BlockArguments
    DataKinds
    DeriveFunctor
    DerivingVia
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    ImpredicativeTypes
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    NoFieldSelectors
    NoStarIsType
    OverloadedRecordDot
    OverloadedStrings
    QuantifiedConstraints
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  build-depends:
    , base        ^>=4.16.0.0
    , bytestring
    , effectful
    , text

library
  import:             base
  hs-source-dirs:     src
  exposed-modules:
    Language.Ordinis
    Language.Ordinis.Lexer
    Language.Ordinis.Parser
    Language.Ordinis.Syntax
    Language.Ordinis.Typechecker
    Language.Ordinis.Typechecker.Names

  build-depends:
    , array
    , comonad
    , containers

  build-tool-depends:
    , alex:alex
    , happy:happy

executable ordinis
  import:           base
  hs-source-dirs:   app/ordinis
  main-is:          Main.hs
  other-modules:    Paths_ordinis
  default-language: Haskell2010
  ghc-options:      -Wall
  build-depends:
    , errata
    , optparse-applicative
    , ordinis
